--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,25 @@
     <![endif]-->
   </head>
   <body>
+
     <h1>Hello, world!</h1>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          Prova1
+        </div>
+        <div class="col-md-3">
+          Prova2
+        </div>
+        <div class="col-md-3">
+          Prova3
+        </div>
+        <div class="col-md-3">
+          Prova4
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
